--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "mac-plugin",
+  "name": "meetings",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.1.1",
-    "@material-ui/icons": "^3.0.1",
-    "axios": "^0.18.0",
-    "material-ui-next-pickers": "0.0.12",
-    "office-ui-fabric-react": "^6.74.0",
+    "office-ui-fabric-react": "^6.74.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
